--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -54,6 +54,18 @@
   timestamp = {2019.04.10},
 }
 
+@Article{AbdulRahman2013,
+  author    = {Abdul-Rahman, A. and Lein, J. and Coles, K. and Maguire, E. and Meyer, M. and Wynne, M. and Johnson, C. R. and Trefethen, A. and Chen, M.},
+  title     = {Rule-based Visual Mappings - with a Case Study on Poetry Visualization},
+  journal   = {Computer Graphics Forum},
+  year      = {2013},
+  volume    = {32},
+  pages     = {381-390},
+  doi       = {10.1111/cgf.12125},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Abe2004,
   author    = {Abe, S. and Suzuki, N.},
   title     = {Scale-free network of earthquakes},
@@ -2506,6 +2518,17 @@
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Bederson2000,
+  author    = {Bederson, B.},
+  title     = {Fisheye menus},
+  booktitle = {13th Annual ACM Symposium on User interface Software and Technology},
+  year      = {2000},
+  pages     = {217-225},
+  doi       = {10.1145/354401.354782},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Behera2016a,
   author    = {Behera, R. Kumar and Rath, S. K.},
   title     = {An efficient modularity based algorithm for community detection in social network},
@@ -4415,6 +4438,17 @@
   timestamp = {2020.07.21},
 }
 
+@InProceedings{Brown2012,
+  author    = {Brown, E. T. and Liu, J. and Brodley, C. E. and Chang, R.},
+  title     = {Dis-function: Learning distance functions interactively},
+  booktitle = {IEEE Conference on Visual Analytics Science and Technology},
+  year      = {2012},
+  pages     = {83-92},
+  doi       = {10.1109/vast.2012.6400486},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @Book{Brownrigg2001,
   title     = {Who's who in the new testament},
   publisher = {Routledge},
@@ -5802,6 +5836,19 @@
   timestamp = {2019.08.15},
 }
 
+@Article{Chernoff1973,
+  author    = {Chernoff, H.},
+  title     = {The Use of Faces to Represent Points in k-Dimensional Space Graphically},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1973},
+  volume    = {68},
+  number    = {342},
+  pages     = {361-368},
+  doi       = {10.1080/01621459.1973.10482434},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @InProceedings{Chi2007,
   author    = {Chi, Y. and Song, X. and Zhou, D. and Hino, K. and Tseng, B. L.},
   title     = {Evolutionary spectral clustering by incorporating temporal smoothness},
@@ -6253,6 +6300,16 @@
   timestamp = {2020.01.02},
 }
 
+@InProceedings{Clement2009,
+  author    = {Clement, T. and Plaisant, C. and Vuillemot, R.},
+  title     = {The story of one: Humanity scholarship with visualization and text analysis},
+  booktitle = {Digital Humanities},
+  year      = {2009},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://d1wqtxts1xzle7.cloudfront.net/1890157/4gmxx75474sthfr.pdf},
+}
+
 @InProceedings{Clement2011,
   author    = {Clément, P. and Bazillon, T. and Fredouille, C.},
   title     = {Speaker diarization of heterogeneous web video files: A preliminary study},
@@ -6285,6 +6342,19 @@
   doi       = {10.1016/j.physa.2015.12.053},
   owner     = {Vincent},
   timestamp = {2019.04.03},
+}
+
+@Article{Cockburn2009,
+  author    = {Cockburn, A. and Karlson, A. and Bederson, B. B.},
+  title     = {A review of overview+detail, zooming, and focus+context interfaces},
+  journal   = {ACM Computing Surveys},
+  year      = {2009},
+  volume    = {41},
+  number    = {1},
+  pages     = {1-31},
+  doi       = {10.1145/1456650.1456652},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @Article{Cohen1960,
@@ -6354,6 +6424,17 @@
   doi       = {10.3115/1118693.1118694},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Collins2007,
+  author    = {Collins, C. and Carpendale, S. and Penn, G.},
+  title     = {Visualization of uncertainty in lattices to support decision-making},
+  booktitle = {9th Joint Eurographics / IEEE VGTC Conference on Visualization},
+  year      = {2007},
+  pages     = {51-58},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+  url       = {https://dl.acm.org/doi/10.5555/2384179.2384187},
 }
 
 @InProceedings{Collins2009,
@@ -7453,6 +7534,19 @@
   timestamp = {2019.04.13},
 }
 
+@Article{DemmansEpp2015,
+  author    = {Epp, C. D. and Bull, S.},
+  title     = {Uncertainty Representation in Visualizations of Learning Analytics for Learners: Current Approaches and Opportunities},
+  journal   = {IEEE Transactions on Learning Technologies},
+  year      = {2015},
+  volume    = {8},
+  number    = {3},
+  pages     = {242-260},
+  doi       = {10.1109/tlt.2015.2411604},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @Article{Dempster1977,
   author    = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
   title     = {Maximum Likelihood from Incomplete Data Via the {EM} Algorithm},
@@ -7901,7 +7995,7 @@
 
 @InProceedings{Don2007,
   author    = {Don, A. and Zheleva, E. and Gregory, M. and Tarkan, S. and Auvil, L. and Clement, T. and Shneiderman, B. and Plaisant, C.},
-  title     = {Discovering interesting usage patterns in text collections},
+  title     = {Discovering interesting usage patterns in text collections: integrating text mining with visualization},
   booktitle = {16th ACM Conference on information and knowledge management},
   year      = {2007},
   pages     = {213-222},
@@ -7982,6 +8076,17 @@
   owner     = {Vincent},
   timestamp = {2010.06.03},
   url       = {https://global.oup.com/academic/product/evolution-of-networks-9780198515906},
+}
+
+@InProceedings{Dou2012,
+  author    = {Dou, W. and Wang, X. and Skau, D. and Ribarsky, W. and Zhou, M. X.},
+  title     = {{LeadLine}: Interactive visual analysis of text data through event identification and exploration},
+  booktitle = {IEEE Conference on Visual Analytics Science and Technology},
+  year      = {2012},
+  pages     = {93-102},
+  doi       = {10.1109/vast.2012.6400485},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @Article{Douze2010,
@@ -8624,6 +8729,19 @@
   timestamp = {2020.01.03},
 }
 
+@Article{Eick1992,
+  author    = {Eick, S. C. and Steffen, J. L. and Sumner, E. E.},
+  title     = {Seesoft-a tool for visualizing line oriented software statistics},
+  journal   = {IEEE Transactions on Software Engineering},
+  year      = {1992},
+  volume    = {18},
+  number    = {11},
+  pages     = {957-968},
+  doi       = {10.1109/32.177365},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @InProceedings{Eisenberg2017,
   author    = {Eisenberg, J. and Finlayson, M.},
   title     = {A Simpler and More Generalizable Story Detector using Verb and Character Features},
@@ -8846,6 +8964,32 @@
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.semanticscholar.org/paper/Detecting-Story-Analogies-from-Annotations-of-Time%2C-Elson/5780f7a71f4bd2816508d7031da9aa7dfd748e14},
+}
+
+@Article{Endert2012,
+  author    = {Endert, A. and Fiaux, P. and North, C.},
+  title     = {Semantic Interaction for Sensemaking: Inferring Analytical Reasoning for Model Steering},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2012},
+  volume    = {18},
+  number    = {12},
+  pages     = {2879-2888},
+  doi       = {10.1109/tvcg.2012.260},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
+@Article{Endert2012a,
+  author    = {Endert, A. and Fiaux, P. and North, C.},
+  title     = {Semantic Interaction for Sensemaking: Inferring Analytical Reasoning for Model Steering},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2012},
+  volume    = {18},
+  number    = {12},
+  pages     = {2879-2888},
+  doi       = {10.1109/tvcg.2012.260},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
 }
 
 @Article{Eom2014,
@@ -9371,6 +9515,18 @@
   owner     = {Vincent},
   timestamp = {2020.02.24},
   url       = {https://hank.feild.org/publications/chiir2020.pdf},
+}
+
+@InCollection{Feinberg2010,
+  author    = {Feinberg, J.},
+  title     = {Wordle},
+  booktitle = {Beautiful Visualization},
+  publisher = {O'Reilly},
+  year      = {2010},
+  pages     = {37-58},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+  url       = {https://www.oreilly.com/library/view/beautiful-visualization/9781449379889/},
 }
 
 @InProceedings{Fekete2000,
@@ -11695,6 +11851,17 @@
   timestamp = {2020.03.13},
 }
 
+@InProceedings{Griethe2006,
+  author    = {Griethe, H. and Schumann, H.},
+  title     = {The visualization of uncertain data: methods and problems},
+  booktitle = {Simulation und Visualisierung},
+  year      = {2006},
+  pages     = {143-156},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+  url       = {http://www.sci.utah.edu/~kpotter/Library/Papers/griethe:2006:UDMP/index.html},
+}
+
 @Article{Griffin1993,
   author    = {Griffin, L. J.},
   title     = {Narrative, Event-Structure Analysis, and Causal Interpretation in Historical Sociology},
@@ -12138,6 +12305,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://aclweb.org/anthology/papers/W/W04/W04-3217/},
+}
+
+@Article{Ham2009,
+  author    = {van Ham, F. and Wattenberg, M. and Viegas, F. B.},
+  title     = {Mapping Text with Phrase Nets},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2009},
+  volume    = {15},
+  number    = {6},
+  pages     = {1169-1176},
+  doi       = {10.1109/tvcg.2009.165},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @PhdThesis{Hamer2008,
@@ -12719,6 +12899,30 @@
   doi       = {10.1037/10628-000},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Heimerl2012,
+  author    = {Heimerl, F. and Koch, S. and Bosch, H. and Ertl, T.},
+  title     = {Visual Classifier Training for Text Document Retrieval},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2012},
+  volume    = {18},
+  number    = {12},
+  pages     = {2839-2848},
+  doi       = {10.1109/tvcg.2012.277},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
+@InProceedings{Heimerl2014,
+  author    = {Heimerl, F. and Lohmann, S. and Lange, S. and Ertl, T.},
+  title     = {Word Cloud Explorer: Text Analytics Based on Word Clouds},
+  booktitle = {47th Hawaii International Conference on System Sciences},
+  year      = {2014},
+  pages     = {1833-1842},
+  doi       = {10.1109/hicss.2014.231},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @Article{Helgeson1993,
@@ -13406,6 +13610,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Hu2013,
+  author    = {Hu, X. and Bradel, L. and Maiti, D. and House, L. and North, C. and Leman, S.},
+  title     = {Semantics of Directly Manipulating Spatializations},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2013},
+  volume    = {19},
+  number    = {12},
+  pages     = {2052-2059},
+  doi       = {10.1109/tvcg.2013.188},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @InProceedings{Hu2015,
   author    = {Hu, Q. and Zhang, Y. and Xu, X. and Li, C. and Xing, C.},
   title     = {{RMDN}: New Approach to Maximize Influence Spread},
@@ -13916,6 +14133,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@InProceedings{Jaenicke2012,
+  author    = {Jänicke, S. and Heine, C. and Stockmann, R. and Scheuermann, G.},
+  title     = {Comparative visualization of geospatialtemporal data},
+  booktitle = {3rd International Conference on Information Visualization Theory and Applications},
+  year      = {2012},
+  pages     = {613-625},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://pdfs.semanticscholar.org/3dc4/95bd2c16ccccc74d8972ae4261c9a98efef0.pdf},
+}
+
+@InProceedings{Jaenicke2014,
+  author    = {Jänicke, S. and Gessner, A. and Büchler, M. and Scheuermann, G.},
+  title     = {Visualizations for text re-use},
+  booktitle = {5th International Conference on Information Visualization Theory and Applications},
+  year      = {2014},
+  pages     = {59-70},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://ieeexplore.ieee.org/document/7294398},
+}
+
 @Article{Jaenicke2015,
   author    = {Jänicke, S. and Franzini, G. and Cheema, M. F. and Scheuermann, G.},
   title     = {On Close and Distant Reading in Digital Humanities: A Survey and Future Challenges},
@@ -14032,6 +14271,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2017.12.06},
   url       = {http://dh2016.adho.org/abstracts/297},
+}
+
+@InProceedings{Jannidis2018,
+  author    = {Jannidis, F. and Konle, L. and Zehe, A. and Hotho, A. and Krug, M.},
+  title     = {Analysing direct speech in German novels},
+  booktitle = {Digital Humanities im Deutschsprachigen Raum},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://pdfs.semanticscholar.org/3e4d/4e8b6ac6a52383df9dd939824f12731a4e5a.pdf},
 }
 
 @Electronic{Janosov2017,
@@ -14886,6 +15135,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Literature Fingerprinting: A New Method for Visual Literary Analysis},
   booktitle = {IEEE Symposium on Visual Analytics Science and Technology},
   year      = {2007},
+  pages     = {115-122},
   doi       = {10.1109/vast.2007.4389004},
   owner     = {Vincent},
   timestamp = {2019.03.23},
@@ -15560,6 +15810,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.penguinrandomhouse.com/books/94583/the-modern-library-writers-workshop-by-stephen-koch/9780375755583/},
 }
 
+@Article{Koch2011,
+  author    = {Koch, S. and Bosch, H. and Giereth, M. and Ertl, T.},
+  title     = {Iterative Integration of Visual Insights during Scalable Patent Search and Analysis},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2011},
+  volume    = {17},
+  number    = {5},
+  pages     = {557-569},
+  doi       = {10.1109/tvcg.2010.85},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
+@Article{Koch2014,
+  author    = {Koch, S. and John, M. and Worner, M. and Muller, A. and Ertl, T.},
+  title     = {VarifocalReader - In-Depth Visual Analysis of Large Text Documents},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2014},
+  volume    = {20},
+  number    = {12},
+  pages     = {1723-1732},
+  doi       = {10.1109/tvcg.2014.2346677},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Koehly1998,
   author    = {Koehly, L. M. and Shivy, V. A.},
   title     = {Social network analysis: A new methodology for counseling research.},
@@ -15926,6 +16202,48 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.12},
   url       = {https://dh2017.adho.org/abstracts/340/340.pdf},
+}
+
+@InProceedings{Krug2017a,
+  author    = {Krug, M. and Wick, C. and Jannidis, F. and Reger, I. and Weimer, L. and Madarasz, N. and Puppe, F.},
+  title     = {Comparison of methods for automatic relation extraction in german novels},
+  booktitle = {Digital Humanities im Deutschsprachigen Raum},
+  year      = {2017},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {http://www.dhd2017.ch/wp-content/uploads/2017/02/DHd-2017-Programm-16.2..pdf},
+}
+
+@TechReport{Krug2018,
+  author      = {Krug, M. and Puppe, F. and Reger, I. and Weimer, L. and Macharowsky, L. and Feldhaus, S. and Jannidis, F.},
+  title       = {Description of a Corpus of Character References in German Novels - DROC [Deutsches ROman Corpus]},
+  institution = {DARIAH-DE},
+  year        = {2018},
+  owner       = {Vincent},
+  timestamp   = {2020.08.13},
+  url         = {http://webdoc.sub.gwdg.de/pub/mon/dariah-de/dwp-2018-27.pdf},
+}
+
+@TechReport{Krug2019,
+  author      = {Krug, M. and Schmidt, D. and Jannidis, F. and Puppe, F.},
+  title       = {Techniques for High Quality Character Reference Detection on German Historical Novels},
+  institution = {Wuerzburg University},
+  year        = {2019},
+  type        = {Submitted Paper},
+  owner       = {Vincent},
+  timestamp   = {2020.08.13},
+  url         = {http://kallimachos.de/kallimachos/index.php/Publikationen},
+}
+
+@TechReport{Krug2019a,
+  author      = {Krug, M. and Schmidt, D. and Wehner, N. and Jannidis, F. and Puppe, F.},
+  title       = {Evaluation of state of the art methods for coreference resolution and quotation attribution on German literary novels},
+  institution = {Wuerzburg University},
+  year        = {2019},
+  type        = {Submitted Paper},
+  owner       = {Vincent},
+  timestamp   = {2020.08.13},
+  url         = {http://kallimachos.de/kallimachos/index.php/Publikationen},
 }
 
 @PhdThesis{Krug2020,
@@ -18207,6 +18525,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.25},
 }
 
+@InCollection{Lohmann2009,
+  author    = {Lohmann, S. and Ziegler, J. and Tetzlaff, L.},
+  title     = {Comparison of Tag Cloud Layouts: Task-Related Performance and Visual Exploration},
+  booktitle = {IFIP Conference on Human-Computer Interaction},
+  publisher = {Springer},
+  year      = {2009},
+  volume    = {5726},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {392-404},
+  doi       = {10.1007/978-3-642-03655-2_43},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @InProceedings{Lombardo2015,
   author    = {Lombardo, V. and Pizzo, A.},
   title     = {The visualisation of drama hierarchies},
@@ -18795,6 +19127,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.04},
   url       = {https://ora.ox.ac.uk/objects/uuid:43275d59-4db2-49db-b26a-96f21378cfa8},
+}
+
+@Article{MacEachren2005,
+  author    = {MacEachren, A. M. and Robinson, A. and Hopper, S. and Gardner, S. and Murray, R. and Gahegan, M. and Hetzler, E.},
+  title     = {Visualizing Geospatial Information Uncertainty: What We Know and What We Need to Know},
+  journal   = {Cartography and Geographic Information Science},
+  year      = {2005},
+  volume    = {32},
+  number    = {3},
+  pages     = {139-160},
+  doi       = {10.1559/1523040054738936},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
 }
 
 @Book{Mackie1996,
@@ -19889,6 +20234,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://variety.com/2019/film/news/box-office-record-disney-dominates-1203098075/},
   owner        = {Vincent},
   timestamp    = {2019.02.20},
+}
+
+@Article{McNaught2010,
+  author    = {McNaught, C. and Lam, P.},
+  title     = {Using wordle as a supplementary research tool},
+  journal   = {Qualitative report},
+  year      = {2010},
+  volume    = {15},
+  number    = {3},
+  pages     = {630-643},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://eric.ed.gov/?id=EJ887905},
 }
 
 @Book{McNeil2007,
@@ -22391,6 +22749,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://promotionalcommunications.org/index.php/pc/article/view/71},
 }
 
+@InProceedings{Oelke2009,
+  author    = {Oelke, D. and Hao, M. and Rohrdantz, C. and Keim, D. A. and Dayal, U. and Haug, L.-E. and Janetzko, H.},
+  title     = {Visual opinion analysis of customer feedback data},
+  booktitle = {IEEE Symposium on Visual Analytics Science and Technology},
+  year      = {2009},
+  pages     = {187-194},
+  doi       = {10.1109/vast.2009.5333919},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Oelke2011,
   author    = {Oelke, D. and Janetzko, H. and Simon, S. and Neuhaus, K. and Keim, D. A.},
   title     = {Visual Boosting in Pixel-based Visualizations},
@@ -22421,12 +22790,9 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Computer Graphics Forum},
   year      = {2013},
   volume    = {32},
-  number    = {3pt4},
   pages     = {371-380},
-  month     = {jun},
   doi       = {10.1111/cgf.12124},
   owner     = {Vincent},
-  publisher = {Wiley-Blackwell},
   timestamp = {2017.12.07},
 }
 
@@ -22829,6 +23195,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s41095-019-0157-9},
   owner     = {Vincent},
   timestamp = {2020.01.25},
+}
+
+@Article{Pang1997,
+  author    = {Pang, A. T. and Wittenbrink, C. M. and Lodha, S. K.},
+  title     = {Approaches to uncertainty visualization},
+  journal   = {Visual Computer},
+  year      = {1997},
+  volume    = {13},
+  number    = {8},
+  pages     = {370-390},
+  doi       = {10.1007/s003710050111},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
 }
 
 @InProceedings{Pang2002,
@@ -23671,6 +24050,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   title     = {Exploring erotics in Emily Dickinson's correspondence with text mining and visual interfaces},
   booktitle = {6th ACM/IEEE CS joint conference on Digital libraries},
   year      = {2006},
+  pages     = {141-150},
   doi       = {10.1145/1141753.1141781},
   owner     = {Vincent},
   timestamp = {2019.03.23},
@@ -24265,6 +24645,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   groups    = {Propagation CD},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Raghunathan2010,
+  author    = {Raghunathan, K. and Lee, H. and Rangarajan, S. and Chambers, N. and Surdeanu, M. and Jurafsky, D. and Manning, C.},
+  title     = {A Multi-Pass Sieve for Coreference Resolution},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2010},
+  pages     = {492-501},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://www.aclweb.org/anthology/D10-1048},
 }
 
 @InProceedings{Rahman2009,
@@ -25768,6 +26159,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.04.27},
 }
 
+@Article{Ruiz-Casado2007,
+  author    = {Ruiz-Casado, M. and Alfonseca, E. and Castells, P.},
+  title     = {Automatising the learning of lexical patterns: An application to the enrichment of WordNet by extracting semantic relationships from Wikipedia},
+  journal   = {Data \& Knowledge Engineering},
+  year      = {2007},
+  volume    = {61},
+  number    = {3},
+  pages     = {484-499},
+  doi       = {10.1016/j.datak.2006.06.011},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Rule2015,
   author    = {Rule, A. and Cointet, J.-P. and Bearman, P. S.},
   title     = {Lexical shifts, substantive changes, and continuity in State of the Union discourse, 1790{\textendash}2014},
@@ -25956,6 +26360,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/BF02289527},
   owner     = {Vincent},
   timestamp = {2017.10.26},
+}
+
+@Article{Sacha2014,
+  author    = {Sacha, D. and Stoffel, A. and Stoffel, F. and Kwon, B. C. and Ellis, G. and Keim, D. A.},
+  title     = {Knowledge Generation Model for Visual Analytics},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2014},
+  volume    = {20},
+  number    = {12},
+  pages     = {1604-1613},
+  doi       = {10.1109/tvcg.2014.2346481},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
 }
 
 @MastersThesis{Sack2011,
@@ -27240,6 +27657,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.22},
 }
 
+@Article{Skeels2009,
+  author    = {Skeels, M. and Lee, B. and Smith, G. and Robertson, G. G.},
+  title     = {Revealing Uncertainty for Information Visualization},
+  journal   = {Information Visualization},
+  year      = {2009},
+  volume    = {9},
+  number    = {1},
+  pages     = {70-81},
+  doi       = {10.1057/ivs.2009.1},
+  owner     = {Vincent},
+  timestamp = {2020.08.14},
+}
+
 @InProceedings{Skorinkin2017,
   author    = {Skorinkin, D. A.},
   title     = {Extracting character networks to explore literary plot dynamics},
@@ -27808,6 +28238,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.11},
 }
 
+@Article{Stasko2008,
+  author    = {Stasko, J. and Görg, C. and Liu, Z.},
+  title     = {Jigsaw: Supporting Investigative Analysis through Interactive Visualization},
+  journal   = {Information Visualization},
+  year      = {2008},
+  volume    = {7},
+  number    = {2},
+  pages     = {118-132},
+  doi       = {10.1057/palgrave.ivs.9500180},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+}
+
 @Article{Stauffer2001,
   author    = {Stauffer, D.},
   title     = {Monte Carlo simulations of Sznajd models},
@@ -28085,6 +28528,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.26},
   url       = {http://www.nupress.northwestern.edu/content/mimesis-and-human-animal},
+}
+
+@InProceedings{Stoyanov2010,
+  author    = {Stoyanov, V. and Cardie, C. and Gilbert, N. and Riloff, E. and Buttler, D. and Hysom, D.},
+  title     = {Coreference Resolution with Reconcile},
+  booktitle = {ACL Conference Short Papers},
+  year      = {2010},
+  pages     = {156-161},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://www.aclweb.org/anthology/P10-2029/},
 }
 
 @InProceedings{Strapparava2004,
@@ -29545,6 +29999,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Tu2019,
+  author    = {Tu, N. D. T. and Krug, M. and Brunner, A.},
+  title     = {Automatic recognition of direct speech without quotation marks. A rule-based approach},
+  booktitle = {Digital Humanities im Deutschsprachigen Raum},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
+  url       = {https://ids-pub.bsz-bw.de/frontdoor/index/index/docId/8770},
+}
+
 @Book{Tukey1977,
   title     = {Exploratory data analysis},
   publisher = {Addison-Wesley},
@@ -29996,6 +30460,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.ncbi.nlm.nih.gov/pubmed/15883903},
+}
+
+@Article{Vigas2008,
+  author    = {Viégas, F. B. and Wattenberg, M.},
+  title     = {TIMELINES: Tag clouds and the case for vernacular visualization},
+  journal   = {interactions},
+  year      = {2008},
+  volume    = {15},
+  number    = {4},
+  pages     = {49},
+  doi       = {10.1145/1374489.1374501},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @InProceedings{Vinciarelli2007,
@@ -30550,6 +31027,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://readwrite.com/2007/03/05/ibm_many_eyes_after_one_month},
   owner        = {Vincent},
   timestamp    = {2016.03.02},
+}
+
+@Article{Wattenberg2008,
+  author    = {Wattenberg, M. and Viegas, F. B.},
+  title     = {The Word Tree, an Interactive Visual Concordance},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2008},
+  volume    = {14},
+  number    = {6},
+  pages     = {1221-1228},
+  doi       = {10.1109/tvcg.2008.172},
+  owner     = {Vincent},
+  timestamp = {2020.08.13},
 }
 
 @Article{Watts1998,
