--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4275,6 +4275,19 @@
   timestamp = {2019.04.13},
 }
 
+@Article{Breiman2001a,
+  author    = {Breiman, L.},
+  title     = {Random Forests},
+  journal   = {Machine Learning},
+  year      = {2001},
+  volume    = {45},
+  number    = {1},
+  pages     = {5-32},
+  doi       = {10.1023/a:1010933404324},
+  owner     = {Vincent},
+  timestamp = {2020.03.13},
+}
+
 @Book{Brendel2011,
   title     = {Understanding Quotation},
   publisher = {De Gruyter},
@@ -5932,7 +5945,7 @@
   timestamp = {2020.08.11},
 }
 
-@Article{CHOI2006,
+@Article{Choi2006,
   author    = {Choi, J. H. and Barnett, G. A. and Chon, B.-S.},
   title     = {Comparing world city networks: a network analysis of Internet backbone and air transport intercity linkages},
   journal   = {Global Networks},
@@ -21053,6 +21066,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://psycnet.apa.org/record/2005-00641-000},
+}
+
+@Book{Moreno1934a,
+  title     = {Who Shall Survive? A New Approach to the Problem of Human Interrelations},
+  publisher = {Beacon House},
+  year      = {1934},
+  author    = {Moreno, J. L.},
+  owner     = {Vincent},
+  timestamp = {2020.07.21},
+  url       = {https://archive.org/details/whoshallsurviven00jlmo},
 }
 
 @Book{Moretti1987,
