--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -6495,6 +6495,16 @@
   url       = {https://www.routledge.com/Whos-Who-in-the-Old-Testament-2nd-Edition/Comay/p/book/9780415260312},
 }
 
+@InProceedings{Condello2014,
+  author    = {Condello, M. and Harrison, R. and Isasi, J. and Kinnaman, A. and Kumari , A.},
+  title     = {A Methodology for Character Networks at the Macroanalytical Level},
+  booktitle = {Digital Humanities Forum},
+  year      = {2014},
+  owner     = {Vincent},
+  timestamp = {2020.10.06},
+  url       = {https://idrh.drupal.ku.edu/sites/idrh.ku.edu/files/files/dhforum2014/abstract-Condello-Character-Networks.pdf},
+}
+
 @InProceedings{Condello2015,
   author    = {Condello, M. and Harrison, R. and Isasi, J. and Kinnaman, A. and Kumari, A.},
   title     = {A methodology for character networks at the macro analytical level},
@@ -11439,6 +11449,16 @@
   timestamp = {2020.01.05},
 }
 
+@InProceedings{Goto2008,
+  author    = {Goto, J. and Yagi, Y. and Aizawa, A. and Sekine, S.},
+  title     = {Generation of correlation charts from TV programs based on anaphora resolution},
+  booktitle = {22nd Annual Conference of the Japanese Society for Artificial Intelligence},
+  year      = {2008},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+  url       = {https://www.jstage.jst.go.jp/article/pjsai/JSAI08/0/JSAI08_0_187/_pdf},
+}
+
 @Book{Gottschall2012,
   title     = {The storytelling animal: How stories make us human},
   publisher = {Houghton Mifflin Harcourt},
@@ -12105,6 +12125,17 @@
   doi       = {10.1038/nature03288},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@InProceedings{Guo2006,
+  author    = {Guo, Q. and Kato, K. and Sato, N. and Hoshino, Y.},
+  title     = {An algorithm for extracting text strings from comic strips},
+  booktitle = {ACM SIGGRAPH},
+  year      = {2006},
+  pages     = {76},
+  doi       = {10.1145/1179622.1179710},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
 }
 
 @Article{Guo2016,
@@ -13317,6 +13348,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.10},
 }
 
+@Book{Hochman1985,
+  title     = {Character in Literature},
+  publisher = {Cornell University Press},
+  year      = {1985},
+  author    = {Hochman, B.},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+  url       = {https://books.google.fr/books/about/Character_in_Literature.html?id=pgdoAAAAMAAJ},
+}
+
 @Article{Hochreiter1997,
   author    = {Hochreiter, S. and Schmidhuber, J.},
   title     = {Long Short-Term Memory},
@@ -14109,6 +14150,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://press.princeton.edu/titles/8767.html},
+}
+
+@Article{Jacobs2019,
+  author    = {Jacobs, A. M.},
+  title     = {Sentiment Analysis for Words and Fiction Characters From the Perspective of Computational (Neuro-)Poetics},
+  journal   = {Frontiers in Robotics and AI},
+  year      = {2019},
+  volume    = {6},
+  pages     = {53},
+  doi       = {10.3389/frobt.2019.00053},
+  owner     = {Vincent},
+  timestamp = {2020.08.30},
 }
 
 @Article{Jacomy2014,
@@ -15883,6 +15936,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://aclweb.org/anthology/W11-4111},
 }
 
+@InProceedings{Kokkinakis2014,
+  author    = {Kokkinakis, D. and Malm, M. and Bergenmar, J. and Ighe, A.},
+  title     = {Semantics in storytelling in Swedish fiction},
+  booktitle = {1st International Conference on Digital Access to Textual Cultural Heritage},
+  year      = {2014},
+  pages     = {137-142},
+  doi       = {10.1145/2595188.2595208},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+}
+
 @InProceedings{Kolesnikov2011,
   author    = {Kolesnikov, A.},
   title     = {Bridging Theatre and Mathematics: a Mathematician's view},
@@ -17521,6 +17585,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@TechReport{LeseleucdeKerouara2020,
+  author      = {de Léséleuc de Kérouara, G. and Duval, A.},
+  title       = {Novel comprehension via dynamic social network of characters},
+  institution = {Centrale Supélec},
+  year        = {2020},
+  type        = {Class Report},
+  doi         = {10.13140/RG.2.2.13445.17128},
+  owner       = {Vincent},
+  timestamp   = {2020.08.30},
+}
+
 @InProceedings{Leskovec2007,
   author    = {Leskovec, J. and McGlohon, M. and Faloutsos, C. and Glance, N. and Hurst, M.},
   title     = {Patterns of Cascading Behavior in Large Blog Graphs},
@@ -18104,6 +18179,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Liang2012a,
+  author    = {Liang, W. and Shi, Y. M. and Tse, C. K. and Wang, Y. L.},
+  title     = {Study on co-occurrence character networks from Chinese essays in different periods},
+  journal   = {Science China Information Sciences},
+  year      = {2012},
+  volume    = {55},
+  number    = {11},
+  pages     = {2417-2427},
+  doi       = {10.1007/s11432-011-4438-x},
+  owner     = {Vincent},
+  timestamp = {2020.10.06},
+}
+
 @Article{LiangLin2010,
   author    = {Lin, L. and Liu, X. and Zhu, S.-C.},
   title     = {Layered Graph Matching with Composite Cluster Sampling},
@@ -18190,7 +18278,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Lillo2014,
-  author    = {Lillo, Ivan and Soto, Alvaro and Niebles, Juan Carlos},
+  author    = {Lillo, I. and Soto, A. and Niebles, J. C.},
   title     = {Discriminative Hierarchical Modeling of Spatio-temporally Composable Human Activities},
   booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
   year      = {2014},
@@ -19904,6 +19992,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@InProceedings{Matsuo2006,
+  author    = {Matsuo, Y. and Mori, J. and Hamasaki, M. and Ishida, K. and Nishimura, T. and Takeda, H. and Hasida, K. and Ishizuka, M.},
+  title     = {POLYPHONET: an advanced social network extraction system from the Web},
+  booktitle = {Proceedings of the 15th international conference on World Wide Web - {WWW} {\textquotesingle}06},
+  year      = {2006},
+  pages     = {397-406},
+  doi       = {10.1145/1135777.1135837},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+}
+
 @Article{Matthews2005,
   author    = {Matthews, P. and Barrett, L.},
   title     = {Small-Screen Social Groups: Soap Operas and Social Networks},
@@ -21583,6 +21682,40 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@InProceedings{Murakami2011,
+  author    = {Murakami, H. and Kyogoku, R. and Ueda, H.},
+  title     = {Creating character connections from manga},
+  booktitle = {3rd International Conference on Agents and Artificial Intelligence},
+  year      = {2011},
+  pages     = {677-680},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+  url       = {https://www.scitepress.org/Papers/2011/31965/31965.pdf},
+}
+
+@InProceedings{Murakami2018,
+  author    = {Murakami, H. and Nagaoka, Y. and Kyogoku, R.},
+  title     = {Creating Character Networks from Comics Using Frames and Words in Balloons},
+  booktitle = {7th International Congress on Advanced Applied Informatics},
+  year      = {2018},
+  pages     = {1-6},
+  doi       = {10.1109/iiai-aai.2018.00012},
+  owner     = {Vincent},
+  timestamp = {2020.10.06},
+}
+
+@Article{Murakami2020,
+  author    = {Murakami, H. and Nagaoka, Y. and Kyogoku, R.},
+  title     = {Creating Character Networks with Kinship Relations from Comics},
+  journal   = {International Journal of Service and Knowledge Management},
+  year      = {2020},
+  volume    = {4},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+  url       = {http://www.iaiai.org/journals/index.php/IJSKM/article/view/468},
+}
+
 @InProceedings{Murr2017,
   author    = {Murr, S. and Barth, F.},
   title     = {Digital Analysis of the Literary Reception of J. W. v. Goethe's 'Die Leiden des jungen Werthers'},
@@ -22819,6 +22952,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.12.07},
 }
 
+@InProceedings{Ogasawara2005,
+  author    = {Ogasawara, T. and Takahas, T. and Ide, I. and Murase, H.},
+  title     = {Construction of a human correlation graph from broadcasted video},
+  booktitle = {22nd Annual Conference of the Japanese Society for Artificial Intelligence},
+  year      = {2005},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
+  url       = {https://www.researchgate.net/publication/242272343_fangsongyingxiangkaranorenwuxiangguangurafunogou_zhu_Construction_of_a_Human_Correlation_Graph_from_Broadcasted_Video},
+}
+
 @InProceedings{Ogawa2010,
   author    = {Ogawa, M. and Ma, K.-L.},
   title     = {Software Evolution Storylines},
@@ -23940,6 +24083,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://archive.org/details/dickensdictionar01pier/page/n4},
+}
+
+@Electronic{Pierson2014,
+  author       = {Pierson, E.},
+  month        = {03},
+  year         = {2014},
+  title        = {Parsing Is Such Sweet Sorrow},
+  howpublished = {\url{https://fivethirtyeight.com/features/parsing-is-such-sweet-sorrow/}},
+  organization = {{FiveThirtyEight}},
+  url          = {https://fivethirtyeight.com/features/parsing-is-such-sweet-sorrow/},
+  owner        = {Vincent},
+  timestamp    = {2020.10.14},
 }
 
 @InProceedings{Pighin2009,
@@ -28298,15 +28453,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Stavanja2019,
-  author    = {Stavanja, J. and Klemen, M.},
-  title     = {Predicting kills in Game of Thrones using network properties},
-  journal   = {arXiv},
-  year      = {2019},
-  volume    = {cs.SI},
-  pages     = {1906.09468},
+  author    = {Stavanja, J. and Klemen, M. and Šubelj, L.},
+  title     = {Predicting kills in Game of Thrones using network properties / Napovedovanje umorov v seriji Igra prestolov z uporabo analize omrežij},
+  journal   = {Uporabna Informatika},
+  year      = {2020},
+  volume    = {28},
+  number    = {2},
+  pages     = {55-65},
   owner     = {Vincent},
   timestamp = {2019.07.01},
-  url       = {https://arxiv.org/abs/1906.09468},
+  url       = {https://uporabna-informatika.si/index.php/ui/article/view/79},
 }
 
 @Article{Steglich2010,
@@ -31777,6 +31933,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://www.palgrave.com/fr/book/9781349084968},
+}
+
+@Article{Wong2006,
+  author    = {Wong, W. S.},
+  title     = {Globalizing Manga: From Japan to Hong Kong and Beyond},
+  journal   = {Mechademia},
+  year      = {2006},
+  volume    = {1},
+  number    = {1},
+  pages     = {23-45},
+  doi       = {10.1353/mec.0.0060},
+  owner     = {Vincent},
+  timestamp = {2020.10.14},
 }
 
 @InProceedings{Wong2019,
