--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -7474,6 +7474,17 @@
   timestamp = {2020.08.13},
 }
 
+@InProceedings{Deldjoo2016,
+  author    = {Deldjoo, Y. and Elahi, M. and Cremonesi, P. and Garzotto, F. and Piazzolla, P.},
+  title     = {Recommending Movies Based on Mise-en-Scene Design},
+  booktitle = {CHI Conference Extended Abstracts on Human Factors in Computing Systems},
+  year      = {2016},
+  pages     = {1540-1547},
+  doi       = {10.1145/2851581.2892551},
+  owner     = {Vincent},
+  timestamp = {2020.10.30},
+}
+
 @InProceedings{Deleris2018,
   author    = {Deleris, L. A. and Bonin, F. and Daly, E. and Deparis, S. and Hou, Y. and Jochim, C. and Lassoued, Y. and Levacher, K.},
   title     = {Know Who Your Friends Are: Understanding Social Connections from Unstructured Text},
@@ -7493,6 +7504,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.upress.umn.edu/book-division/books/a-thousand-plateaus},
+}
+
+@Article{Deleyto1991,
+  author    = {Deleyto, C.},
+  title     = {Focalisation in film narrative},
+  journal   = {Atlantis},
+  year      = {1991},
+  volume    = {13},
+  number    = {1/2},
+  pages     = {159-177},
+  owner     = {Vincent},
+  timestamp = {2020.10.30},
+  url       = {https://www.jstor.org/stable/41054660},
 }
 
 @Article{DelFabro2013,
@@ -16606,6 +16630,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.aclweb.org/anthology/C18-1117},
 }
 
+@InProceedings{Kvisgaard2019,
+  author    = {Kvisgaard, A. and Klem, S. O. and Nielsen, T. L. and Rafferty, E. I. and Nilsson, N. C. and Hoeg, E. R. and Nordahl, R.},
+  title     = {Frames to Zones: Applying Mise-en-Scène Techniques in Cinematic Virtual Reality},
+  booktitle = {5th IEEE Workshop on Everyday Virtual Reality},
+  year      = {2019},
+  doi       = {10.1109/wevr.2019.8809592},
+  owner     = {Vincent},
+  timestamp = {2020.10.30},
+}
+
 @InProceedings{Kwon2013,
   author    = {Kwon, S. and Cha, M. and Jung, K. and Chen, W. and Wang, Y.},
   title     = {Prominent Features of Rumor Propagation in Online Social Media},
@@ -17468,6 +17502,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {https://www.researchgate.net/publication/334131905_Learning_Distributed_Representations_of_Character_Networks_for_Computational_Narrative_Analytics},
 }
 
+@InProceedings{Lee2019h,
+  author    = {Lee, O-J. and Jung, J. J.},
+  title     = {Computational Narrative Representation and Analytics},
+  booktitle = {2nd International Conference on AI Humanities},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2020.10.25},
+  url       = {https://www.researchgate.net/publication/335219122_Computational_Narrative_Representation_and_Analytics},
+}
+
 @Article{Lee2020,
   author    = {Lee, O-J. and Jung, J. J.},
   title     = {Story embedding: Learning distributed representations of stories based on character networks},
@@ -17515,6 +17559,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.24963/ijcai.2020/709},
   owner     = {Vincent},
   timestamp = {2020.07.10},
+}
+
+@InProceedings{Lee2020h,
+  author        = {Lee, O-J. and Kim, J.-T.},
+  title         = {Discovering Mise-en-scène in Movies by Analyzing Scripts},
+  booktitle     = {1st International Workshop on Computational Humanities and Social Sciences},
+  year          = {2020},
+  series        = {CEUR Workshop Proceedings},
+  pages         = {11-16},
+  __markedentry = {[Vincent:]},
+  groups        = {Cinema (Arts)},
+  owner         = {Vincent},
+  timestamp     = {2020.10.25},
+  url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
 }
 
 @InCollection{Leerssen2019,
@@ -19800,6 +19858,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/fmls/cqu017},
   owner     = {Vincent},
   timestamp = {2020.07.22},
+}
+
+@Book{Martin2014b,
+  title     = {Mise en Scène and Film Style},
+  publisher = {Palgrave Macmillan},
+  year      = {2014},
+  author    = {Martin, A.},
+  doi       = {10.1057/9781137269959},
+  owner     = {Vincent},
+  timestamp = {2020.10.30},
 }
 
 @InProceedings{Martin2018,
@@ -32704,6 +32772,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1098/rsos.171024},
   owner     = {Vincent},
   timestamp = {2017.07.31},
+}
+
+@Article{You2020a,
+  author    = {You, E.-S. and Lee, O-J. and Kim, J.-T.},
+  title     = {Computational Narrative Generation: A Survey},
+  journal   = {Journal of Information Technology and Applied Engineering},
+  year      = {2020},
+  volume    = {10},
+  number    = {1},
+  pages     = {9-18},
+  doi       = {10.22733/JITAE.2020.10.01.002},
+  owner     = {Vincent},
+  timestamp = {2020.10.25},
 }
 
 @Article{Young2004,
